# ore

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  select_blocks.sh  setup.sh
.cursor/rules/: base.mdc
api/src/state/: round.rs
cli/src/: main.rs
script/: auto_deploy.sh  generate_keypair.sh  select_blocks.sh  setup.sh
spec/: DIRECTORY_STRUCTURE.md  E2E_FLOW_ANALYSIS.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTING.md  MAKEFILE_REFERENCE.md  QUICKSTART.md  SCRIPTS_README.md  SCRIPT_MIGRATION_SUMMARY.md
test/: Cargo.toml
test/e2e/: deploy_e2e.rs
test/src/: helpers.rs  lib.rs
test/tests/: deploy_e2e.rs
